# regent

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  MARKETING.md  README.md  REGENT.md  SECURITY.md  WAKE_UP_REPORT.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: launch.json
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-pages.yml  nightly.yml  pages.yml  release.yml  test.yml
assets/: README.md
assets/audio/: README.md
assets/marketing/: README.md
assets/palette/: kingdomos.gpl
assets/sprites/: README.md
docs/: AI_SPRITES.md  AUTOMATION.md  EVENT_SCHEMA.md  FEEDBACK.md  INTEGRATIONS.md  ITCH.md  MARKETING.md  PLAYTEST_RECRUITING.md  SCREENSHOTS.md  TESTING.md  UPDATER.md  V1_ROADMAP.md
public/: manifest.webmanifest
public/sprites/: README.md  manifest.json
scripts/: changelog.mjs  check-assets.mjs  install-hooks.mjs  release.mjs  seed-events.ps1  slice-sheet.mjs  sprite-prompts.md
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: events.rs  lib.rs  main.rs  state.rs  tray.rs  window.rs
src-tauri/src/ambient/: fs_watcher.rs  git_watcher.rs  inbox.rs  mod.rs  system.rs  twitch.rs
src-tauri/src/plugins/: http.rs  mod.rs
src/engine/: Audio.ts  Camera.ts  CharacterRenderer.ts  CharacterSpec.ts  HoverState.ts  Palette.ts  PetSpec.ts  PixiApp.ts  SpriteFactory.ts  TileRenderer.ts
src/lib/: crashLog.ts  feedback.ts  rng.ts  sanitize.test.ts  sanitize.ts
src/sim/: Associations.test.ts  (+15 more)
(+167 files in other folders)
