[package]
name = "kingdomos"
version = "0.2.0"
description = "Ambient SNES-style fantasy kingdom desktop app"
authors = ["jonat"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "kingdomos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = ["tray-icon", "image-png"] }
tauri-plugin-fs = "2.0"
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
notify = "6"
sysinfo = "0.32"
axum = { version = "0.7", optional = true }
tower = { version = "0.5", optional = true }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
walkdir = "2"

[features]
default = []
http-server = ["dep:axum", "dep:tower"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
